--- a/.github/workflows/publish-bottles.yml
+++ b/.github/workflows/publish-bottles.yml
@@ -106,7 +106,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add Formula/easyhg.rb
           git commit -m "easyhg: merge bottles for ${{ steps.release_tag.outputs.value }}"
-          git push
+          git push origin HEAD:main
 
       - name: Create or update release
         uses: softprops/action-gh-release@v2
