--- a/.github/workflows/publish-bottles.yml
+++ b/.github/workflows/publish-bottles.yml
@@ -97,6 +97,8 @@ jobs:
           echo "value=bottle-${version}" >> "$GITHUB_OUTPUT"
 
       - name: Commit merged bottle block
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           if git diff --quiet -- Formula/easyhg.rb; then
             echo "No bottle metadata changes to commit."
@@ -106,6 +108,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add Formula/easyhg.rb
           git commit -m "easyhg: merge bottles for ${{ steps.release_tag.outputs.value }}"
+          git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
           git push origin HEAD:main
 
       - name: Create or update release
